Enable java 22 preview features
Signed-off-by: mintdaniel42 <59701285+mintdaniel42@users.noreply.github.com>